# save-guardian

./: Cargo.toml  LICENSE  README.md  build.rs  convert_icon.py  create_icon.py
docs/: backup_management_improvements.md  steam_api_integration.md
examples/: test_steam_api.rs
release/: RELEASE_NOTES.md
src/: backup.rs  config.rs  gui.rs  lib.rs  main.rs  non_steam.rs  steam.rs  sync.rs  types.rs
